...
      ],
      {cancelable: false},
    );
  };

  return (
    <Container testID="profile">
      <Header />
      <Items>
        <ItemArea>
          <ItemText>Notificações</ItemText>
          <ItemSwitch
            value={allowNotification}
...
